# Ray_Tracing_CXX

./: CMakeLists.txt  README.md  image.ppm  main.cxx
Images/: image4(diffuse_sphere).ppm  image5(diffuse render 2).ppm
bulid/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  raytracing.slnx  raytracing.vcxproj  raytracing.vcxproj.filters
includes/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  rtweeked.h  sphere.h  vec3.h
src/: main.cc
